<resources>
    <string name="app_name">ShopApp</string>
    <string name="username">Enter your username</string>
    <string name="password">Enter your password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="fName">Enter your first name</string>
    <string name="mobile">Enter your mobile number</string>
    <string name="signup">Signup</string>
    <string name="lottie_animation_shopping_cart">https://assets5.lottiefiles.com/packages/lf20_47pyyfcf.json</string>
    <string name="email">Enter your email</string>
    <string name="backToLogin">Already have an account?</string>
    <string name="profile">Profile</string>
    <string name="setting">Settings</string>
    <string name="logout">Logout</string>
    <string name="shop">Shop</string>
    <string name="my_order">My Order</string>
</resources>